--- a/src/main/resources/monopoly/interface/Field6.fxml
+++ b/src/main/resources/monopoly/interface/Field6.fxml
@@ -12,7 +12,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="417.0" prefWidth="609.0" style="-fx-background-color: #d7d6d0;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Button layoutX="16.0" layoutY="366.0" mnemonicParsing="false" onAction="#sellByHalf" prefHeight="31.0" prefWidth="216.0" text="Продать за пол стоимости">
+      <Button fx:id="sellByHalfButton" layoutX="16.0" layoutY="366.0" mnemonicParsing="false" onAction="#sellByHalf" prefHeight="31.0" prefWidth="216.0" text="Продать за пол стоимости">
          <font>
             <Font size="15.0" />
          </font>
