--- a/src/main/resources/monopoly/interface/GamePlay.fxml
+++ b/src/main/resources/monopoly/interface/GamePlay.fxml
@@ -725,7 +725,7 @@
                               </Button>
                            </children>
                         </AnchorPane>
-                        <AnchorPane fx:id="negativeAction" disable="true" layoutX="7.0" layoutY="208.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" opacity="0.0" prefHeight="369.0" prefWidth="586.0" style="-fx-background-color: #d7d6d0;">
+                        <AnchorPane fx:id="negativeAction" disable="true" layoutX="5.0" layoutY="203.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" opacity="0.0" prefHeight="366.0" prefWidth="588.0" style="-fx-background-color: #d7d6d0;">
                            <children>
                               <Label layoutX="129.0" text="Случилось происшетсвие!">
                                  <font>
@@ -936,5 +936,100 @@
             </ImageInput>
          </effect>
       </Rectangle>
+      <Label fx:id="labelUpgrade1" layoutX="232.0" layoutY="180.0" textFill="#e1ab0b">
+         <font>
+            <Font size="32.0" />
+         </font>
+      </Label>
+      <Label fx:id="labelUpgrade2" layoutX="330.0" layoutY="180.0" textFill="#e1ab0b">
+         <font>
+            <Font size="32.0" />
+         </font>
+      </Label>
+      <Label fx:id="labelUpgrade3" layoutX="430.0" layoutY="180.0" textFill="#e1ab0b">
+         <font>
+            <Font size="32.0" />
+         </font>
+      </Label>
+      <Label fx:id="labelUpgrade5" layoutX="630.0" layoutY="180.0" textFill="#e1ab0b">
+         <font>
+            <Font size="32.0" />
+         </font>
+      </Label>
+      <Label fx:id="labelUpgrade6" layoutX="727.0" layoutY="180.0" textFill="#e1ab0b">
+         <font>
+            <Font size="32.0" />
+         </font>
+      </Label>
+      <Label fx:id="labelUpgrade8" layoutX="830.0" layoutY="260.0" prefHeight="3.0" prefWidth="67.0" rotate="90.0" textFill="#e1ab0b">
+         <font>
+            <Font size="32.0" />
+         </font>
+      </Label>
+      <Label fx:id="labelUpgrade9" layoutX="830.0" layoutY="360.0" prefHeight="3.0" prefWidth="67.0" rotate="90.0" textFill="#e1ab0b">
+         <font>
+            <Font size="32.0" />
+         </font>
+      </Label>
+      <Label fx:id="labelUpgrade10" layoutX="830.0" layoutY="450.0" prefHeight="3.0" prefWidth="67.0" rotate="90.0" textFill="#e1ab0b">
+         <font>
+            <Font size="32.0" />
+         </font>
+      </Label>
+      <Label fx:id="labelUpgrade11" layoutX="830.0" layoutY="550.0" prefHeight="3.0" prefWidth="67.0" rotate="90.0" textFill="#e1ab0b">
+         <font>
+            <Font size="32.0" />
+         </font>
+      </Label>
+      <Label fx:id="labelUpgrade13" layoutX="830.0" layoutY="740.0" prefHeight="3.0" prefWidth="67.0" rotate="90.0" textFill="#e1ab0b">
+         <font>
+            <Font size="32.0" />
+         </font>
+      </Label>
+      <Label fx:id="labelUpgrade15" layoutX="730.0" layoutY="830.0" prefHeight="3.0" prefWidth="67.0" textFill="#e1ab0b">
+         <font>
+            <Font size="32.0" />
+         </font>
+      </Label>
+      <Label fx:id="labelUpgrade16" layoutX="630.0" layoutY="830.0" prefHeight="3.0" prefWidth="67.0" textFill="#e1ab0b">
+         <font>
+            <Font size="32.0" />
+         </font>
+      </Label>
+      <Label fx:id="labelUpgrade17" layoutX="530.0" layoutY="830.0" prefHeight="3.0" prefWidth="67.0" textFill="#e1ab0b">
+         <font>
+            <Font size="32.0" />
+         </font>
+      </Label>
+      <Label fx:id="labelUpgrade19" layoutX="330.0" layoutY="830.0" prefHeight="3.0" prefWidth="67.0" textFill="#e1ab0b">
+         <font>
+            <Font size="32.0" />
+         </font>
+      </Label>
+      <Label fx:id="labelUpgrade22" layoutX="115.0" layoutY="740.0" prefHeight="3.0" prefWidth="67.0" rotate="90.0" textFill="#e1ab0b">
+         <font>
+            <Font size="32.0" />
+         </font>
+      </Label>
+      <Label fx:id="labelUpgrade24" layoutX="115.0" layoutY="545.0" prefHeight="3.0" prefWidth="67.0" rotate="90.0" textFill="#e1ab0b">
+         <font>
+            <Font size="32.0" />
+         </font>
+      </Label>
+      <Label fx:id="labelUpgrade25" layoutX="115.0" layoutY="450.0" prefHeight="3.0" prefWidth="67.0" rotate="90.0" textFill="#e1ab0b">
+         <font>
+            <Font size="32.0" />
+         </font>
+      </Label>
+      <Label fx:id="labelUpgrade26" layoutX="115.0" layoutY="360.0" prefHeight="3.0" prefWidth="67.0" rotate="90.0" textFill="#e1ab0b">
+         <font>
+            <Font size="32.0" />
+         </font>
+      </Label>
+      <Label fx:id="labelUpgrade27" layoutX="115.0" layoutY="265.0" prefHeight="3.0" prefWidth="67.0" rotate="90.0" textFill="#e1ab0b">
+         <font>
+            <Font size="32.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
