--- a/src/main/resources/monopoly/interface/HowToPlay.fxml
+++ b/src/main/resources/monopoly/interface/HowToPlay.fxml
@@ -6,12 +6,11 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="784.0" prefWidth="1173.0" style="-fx-background-color: #d7d6d0;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <ImageView fitHeight="760.0" fitWidth="759.0" layoutX="398.0" layoutY="20.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../../../../../Downloads/Игра%20(1).png" />
+            <Image url="@../fields/game.png" />
          </image>
       </ImageView>
       <Text layoutX="14.0" layoutY="30.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Обанкротьте своих соперников!">
